# projet_restaus

./: README.md  a faire   ficher temporaire pour test la base de donnée.py  ficher temporaire pourla base de donne.py  moduledb.py  pyproject.toml  restordi.py  setup.py
