[project]
name = "projet_restau"
version = "0.0.20"
description = "Projet Python contenant les données des Restos du Cœur, destinées à être utilisées dans une interface graphique du logiciel de reconditionnement de matériel informatique. "
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Pathlib", email = "gautroncyber@proton.me" }
]
